color complexity fixed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,8 @@
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:tabTextColor="#FFFADE"
+        app:tabIndicatorColor="#000000"
         android:id="@+id/idTabLayout">
     </com.google.android.material.tabs.TabLayout>
     </com.google.android.material.appbar.AppBarLayout>
