--- a/app/src/main/res/layout/user_info.xml
+++ b/app/src/main/res/layout/user_info.xml
@@ -5,7 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="10dp"
+    android:elevation="20dp"
+    android:layout_marginBottom="5dp"
+    app:cardBackgroundColor="#DBE0E1"
+    app:cardCornerRadius="10dp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
