--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowContentTransitions">true</item>
         <item name="colorControlNormal">#FFFADE</item>
+        <item name="android:divider">#000000</item>
     </style>
 
 </resources>
